assert GradleVersion.current() >= GradleVersion.version('4.2') //lowest gradle version supported

allprojects {
    apply plugin: 'idea'

    defaultTasks 'build'
    group = 'no.statkart.sktools'

    // version kan settes via properties (feks kommandolinje -Psktools_versjon=xxx )
    project.version = sktools_versjon

    // valgfri build katalog - kan benyttes for kompilering for flere samtidige Gradle versjoner..
    buildDir = gradle.startParameter.systemPropertiesArgs.get('buildDirName', Project.DEFAULT_BUILD_DIR_NAME)

    //kobler inn standard upload repositores ved bruk av maven plugin
    plugins.withType(MavenPlugin) {
        uploadArchives.repositories.mavenDeployer {
            repository(url: uri(REPO_UPLOAD_RELEASES)) {
                authentication([userName: REPO_UPLOAD_RELEASES_USERNAME, password: REPO_UPLOAD_RELEASES_PASSWORD])
            }
        }
    }
}

// Optional configuration of library versions to use. (not production)
// Values will be read from project.properties with naming convention "version.<key>"
// Simply add version properties to your gradle-user.property file to use this feature.
def libVersion(String name, String defaultValue) {
    project.ext.properties.get('version.' + name, defaultValue) //development mode only
}


// build a map of the dependency artifacts to use. Allows centralized definition of the versions of artifacts to
// use. In that respect it serves a role similar to <dependencyManagement> in Maven
project.ext.libraries = [

        log4j: "log4j:log4j:${libVersion('log4j', '1.2.17')}@jar",

        commons_io  : 'commons-io:commons-io:1.3.2@jar', //"org.apache.commons:commons-io" is relocated to "commons-io:commons-io"
        commons_lang3: 'org.apache.commons:commons-lang3:3.4',
        guava: 'com.google.guava:guava:19.0',

        // Testing
        assertj: 'org.assertj:assertj-core:2.8.0', /* AssertJ 2.x for Java 7, 3.x for Java8 */
        testng: 'org.testng:testng:6.9.10',
        hsqldb: 'org.hsqldb:hsqldb:2.2.8',
        jaxws: 'com.sun.xml.ws:jaxws-tools:2.2.10',
]


// Oracle Weblogic dependencies

assert WEBLOGIC_VERSION //husk å utvide byggesystem med ny weblogic version..
assert WEBLOGIC_HOME //WEBLOGIC_HOME maa vaere gitt




subprojects { Project project ->
    apply plugin: 'project-report'
    apply plugin: 'base'


    repositories {
        mavenLocal()
        maven { name = 'public'; url = "${rootProject.MAVEN_REPO}" }
    }


    def filterTestGroup = { Test test = test, String group, String value ->
        test.with {
            if (testFramework.class.simpleName == 'TestNGTestFramework') {
                if (value == 'INCLUDE') {
                    testFramework.options.includeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: including group '${group}'" }
                } else if (value == 'EXCLUDE') {
                    testFramework.options.excludeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                } else if (value == 'EXCLUDE_WHEN_NO_INCLUDES') {
                    project.afterEvaluate {
                        if (testFramework.options.includeGroups.isEmpty()) {
                            testFramework.options.excludeGroups group
                            test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                        } else {
//                            logMessageWhenTask test "${test.name} configuration: ignoring group '${group}'"
                        }
                    }
                } else {
                    assert value == 'IGNORED' //feil ved ikke gyldig verdi for filtrering av tester
                }
            } else {
                test.doFirst { logger.warn "${test.name} configuration: unable to configure groups('${group}') for ${testFramework.class.simpleName}" }
            }
        }
    }


    project.plugins.withType(JavaPlugin) {

        sourceCompatibility = '1.7'
        targetCompatibility = '1.7'

        // appropriately inject common dependencies into each sub-project
        dependencies {
            testCompile libraries.assertj
            testCompile libraries.testng
        }


        project.ext.set('filterProperties', [:])

        project.afterEvaluate {
            if (project.ext.filterProperties.isEmpty())
            project.properties.entrySet().collectEntries(project.ext.filterProperties) {(it.value instanceof String) ? new MapEntry(it.key, it.value) : [:]}
        }


        ['main', 'test'].each { String scope ->
            def unfilteredPropertiesDir = project.file("src/${scope}/resources-filter")
            def filteredResourcesDir = project.file("gen/${scope}/resources")

            def scopeName = scope.replaceFirst(".") {it[0].toUpperCase()}

            if (unfilteredPropertiesDir.isDirectory()) {
                def filterTask = task("filter${scopeName}Resources") {
                    inputs.dir(unfilteredPropertiesDir)

                    inputs.properties(project.filterProperties)
                    outputs.dir(filteredResourcesDir)
                    doLast {
                        delete(filteredResourcesDir);
                        copy {
                            into(filteredResourcesDir)
                            from(unfilteredPropertiesDir)
                            filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: project.filterProperties)
                        }
                        ant.touch() { fileset(dir: filteredResourcesDir)}
                    }
                }
                project.sourceSets."$scope".resources.srcDir filteredResourcesDir
                project.processResources.dependsOn filterTask

                project.tasks.ideaModule.dependsOn filterTask
                project.tasks.ideaModule.doFirst {
                    println "...mkdir ${project.relativePath(filteredResourcesDir)}"
                    project.mkdir(filteredResourcesDir)
                }
            }
        }



        // Får Idea til å legge build katalog for alle moduler i en egen felles topp katalog (out/production, out/test)
        project.idea.module {
            inheritOutputDirs = true
//            scopes.PROVIDED.plus += configurations.provided
        }


        // Test resultater og rapporter havner i egne mapper for paralleliserbarhet i Jenkins.
        // - feks build/reports/tests/<task name>
        // - feks build/test-results/<task name>
        tasks.create("testGradle${GradleVersion.current().baseVersion.version}", Test)
    }

    /**
     * Testing via TestNG grupper. Se bruk av @Test(groups = "") i koden.
     *
     * -DignoreFailures=true stopper ikke eksekvering etter feilende modul og kjører videre. Kjekt for integrasjonstesting som ønsker å kjøre alle tester alltid.
     */
    project.tasks.withType(Test) { Test test -> //felles for alle test-tasks

        useTestNG() {  //benytter kun TestNG over alt
            listeners << 'org.testng.reporters.XMLReporter' // For Jenkins, siden Gradle 1.4+ ikke tar med default listeners som standard lenger
//            listeners << 'org.uncommons.reportng.HTMLReporter' // Gradles innebygde rapport viser ikke skipped
        }

        ignoreFailures = gradle.startParameter.systemPropertiesArgs.get('ignoreFailures', 'false') == 'true' //Gradle feiler ikke dersom denne er true. Kan ikke være true dersom en gjør en install eller uploadArchives

        jvmArgs '-Xmx512m', '-XX:PermSize=128m', '-XX:MaxPermSize=256m'
//            testLogging.showStandardStreams = true

        filterTestGroup(test, 'broken', 'EXCLUDE')
        inputs.property 'excludedGroups', testFramework.options.includeGroups //trigger re-kjøring av test ved endring av grupper
        inputs.property 'includedGroups', testFramework.options.excludeGroups //trigger re-kjøring av test ved endring av grupper

        if (rootProject.hasProperty('test.remote.debug')) {
            jvmArgs '-Xdebug'
            jvmArgs '-Xnoagent'
            jvmArgs '-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y'
        }

        //listening to test execution events
        afterTest { descriptor, result ->
            logger.lifecycle("${result.toString() == 'SUCCESS' ? ' Successfully tested' : 'Failed testing'} : ${descriptor.className}#${descriptor.name}")
            if (result.resultType.name() == 'FAILURE') {
                logger.error("${result.exception}")
            }
        }
    }


    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8' //SKTOOLS-163: java source in UTF-8 encoding
    }

    tasks.withType(GroovyCompile) {
        options.encoding = 'UTF-8' //SKTOOLS-163: java source in UTF-8 encoding (discriminates java files in the groovy source set)
        groovyOptions.encoding = 'UTF-8' //SKTOOLS-163: groovy source files in UTF-8 encoding (default is UTF-8)
    }

}

allprojects {
    afterEvaluate {
        tasks.withType(Jar) {
            it.manifest {
                attributes([
                        'Specification-Title': project.name,
                        'Specification-Vendor': 'Statens kartverk',
                        'Specification-Version': gradle.startParameter.projectProperties.get('sktools_versjon', "${sktools_versjon}").replace('-SNAPSHOT', ''),

                        //misc build info
                        'Build-By'     : System.getProperty('user.name'),
                        'Build-Machine': java.net.InetAddress.localHost.hostName,
                        'Build-Repo': MAVEN_REPO,
                        'Build-Gradle': gradle.gradleVersion,

                        'Implementation-Title': "${project.name} bygget for ${(version == null || version.contains('-SNAPSHOT')) ? 'TEST' : 'Produksjon'}",
                        'Implementation-Vendor': 'Statens kartverk',
                        'Implementation-Version': project.version,
                ])
            }
        }
    }

    tasks.withType(Upload) {
        doLast {
            logger.lifecycle "Uploaded artifacts for ${project.path} version '${project.version}'. Description: '${description}'"
        }
    }

}

afterEvaluate {

    idea.project {
        jdkName = '1.7'
        languageLevel = '1.7'

        ipr {
            //Perforce as default vcs by tinkering with the output *.ipr file before it's written out
            withXml {
                def component = it.asNode().appendNode('component', ['name': 'VcsDirectoryMappings'])
                component.appendNode('mapping', ['directory': '', 'vcs': 'Perforce'])
            }

            //file encodings for project
            withXml {
                def encoding = it.asNode().component.find { it.@name == 'Encoding' }
                if (encoding) {
                    encoding.@useUTFGuessing = false
                    encoding.@native2AsciiForPropertiesFiles = true
                    encoding.@defaultCharsetForPropertiesFiles = 'ISO-8859-1'
                    if (!encoding.file) {
                        encoding.appendNode('file')
                    }
                    encoding.file.@url = 'PROJECT'
                    encoding.file.@charset = 'utf-8'
                } else {
                    logger.warn('Not able to configure file encodings for IntelliJ')
                }
            }

            //java code style
            withXml {
                def rootNode = it.asNode()
                def projectCodeStyleSettingsManager = rootNode.component.find { it.@name == 'ProjectCodeStyleSettingsManager'}
                if (projectCodeStyleSettingsManager == null) {
                    projectCodeStyleSettingsManager = new XmlParser().parseText('''\
                          <component name="ProjectCodeStyleSettingsManager">
                            <option name="PER_PROJECT_SETTINGS">
                              <value>
                                <option name="CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND" value="999" />
                                <option name="NAMES_COUNT_TO_USE_IMPORT_ON_DEMAND" value="999" />
                              </value>
                            </option>
                            <option name="USE_PER_PROJECT_SETTINGS" value="true" />
                          </component>
                            ''')
                    rootNode.append(projectCodeStyleSettingsManager)
                }
            }

        }
    }

    // branch spesifike navn for prosjekt og workspace fil.
    ideaWorkspace {
        outputFile = file("${project.name}-${project.version.toString().replace('-SNAPSHOT', '')}-gradle${gradle.gradleVersion}.iws")
    }
    idea.project {
        outputFile = file("${project.name}-${project.version.toString().replace('-SNAPSHOT', '')}-gradle${gradle.gradleVersion}.ipr")
    }

    // gradle spesifik iml fil da gradle dependencies ligger på hver modul
    allprojects {
        idea.module {
            outputFile = file("${project.name}-gradle${gradle.gradleVersion}.iml")
        }
    }

}

//defaults for IntelliJ Workspace iws file
rootProject.idea.workspace.iws.withXml { provider ->
    def rootNode = provider.asNode()
    final def weblogicHome = WEBLOGIC_HOME

    /**
     * Eksempler og dokumentasjon på hvordan man kan benytte groovy xml og Node funksjonalitet
     * <br> http://groovy.codehaus.org/Reading+XML+using+Groovy%27s+XmlSlurper
     * <br> http://groovy.codehaus.org/Updating+XML+with+XmlSlurper
     */
    def runManagerNode = rootNode.component.find { it.@name == 'RunManager'}.with { runManager ->

        //default settings for TestNG
        runManager.configuration.find { it.@type == 'TestNG' && it.'@default' == 'true' }.with {
            if( it.is(null) ) {
                it = new XmlParser().parseText('''\
          <configuration default="true" type="TestNG" factoryName="TestNG">
            <extension name="coverage" enabled="false" merge="false" runner="emma" />
            <module name="" />
            <option name="ALTERNATIVE_JRE_PATH_ENABLED" value="false" />
            <option name="ALTERNATIVE_JRE_PATH" />
            <option name="SUITE_NAME" />
            <option name="PACKAGE_NAME" />
            <option name="MAIN_CLASS_NAME" />
            <option name="METHOD_NAME" />
            <option name="GROUP_NAME" />
            <option name="TEST_OBJECT" value="CLASS" />
            <option name="VM_PARAMETERS" value="" />
            <option name="PARAMETERS" />
            <option name="WORKING_DIRECTORY" />
            <option name="OUTPUT_DIRECTORY" />
            <option name="ANNOTATION_TYPE" />
            <option name="ENV_VARIABLES" />
            <option name="PASS_PARENT_ENVS" value="true" />
            <option name="TEST_SEARCH_SCOPE">
              <value defaultName="moduleWithDependencies" />
            </option>
            <option name="USE_DEFAULT_REPORTERS" value="false" />
            <option name="PROPERTIES_FILE" />
            <envs />
            <properties />
            <listeners />
            <method />
          </configuration>
        ''')
                runManager.append(it)
            }
            it.option.find { it.@name == 'TEST_OBJECT' }.@value = 'PACKAGE' //ved høyreklikk i struktur velges kun tester innen samme pakke. Denne sees i sammenheng med  TEST_SEARCH_SCOPE=singleModule
            it.option.find { it.@name == 'TEST_SEARCH_SCOPE' }.value.@defaultName = 'singleModule' //kjører kun tester innen samme modul - ikke på tvers av moduler

        }



        runManager.configuration.findAll { ['TestNG', 'Application', 'Remote', 'JUnit', 'WebApp'].contains(it.@type)}.each {
            //default path variables
            it.envs.each {
                it.findAll {"${it.@name}".startsWith('WEBLOGIC_HOME')}.each {it.replaceNode{}} //tar vekk evt gammel
                it.appendNode('env', [name: 'WEBLOGIC_HOME', value: weblogicHome]) //legger til weblogic for testing av gradle-plugins som trenger dette

                it.findAll {"${it.@name}".startsWith('WEBLOGIC_VERSION')}.each {it.replaceNode{}} //tar vekk evt gammel
                it.appendNode('env', [name: 'WEBLOGIC_VERSION', value: weblogicVersion])
            }

        }
    }

}

buildscript {

    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Miljøvariable for konfigurasjon av byggemiljø
    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    [
            'WEBLOGIC_HOME',
            'WEBLOGIC_VERSION',
    ].each { key ->
        if (!project.hasProperty(key) && System.getenv(key) != null) {
            project.ext.setProperty(key, System.getenv(key))
        }
    }

    if (!project.hasProperty('sktools_versjon')) {
        project.ext.setProperty('sktools_versjon', Project.DEFAULT_VERSION)
    }

    ext.MAVEN_REPO = rootProject.properties.get('MAVEN_REPO', System.getenv('MAVEN_REPO'))
    if (ext.MAVEN_REPO == null) {
        ext.MAVEN_REPO = 'http://nexus.statkart.no:8090/nexus/content/groups/public/'
        logger.warn "warning: MAVEN_REPO not defined. Defaulting to ${MAVEN_REPO}"
    }

    ext.REPO_UPLOAD_RELEASES = rootProject.properties.get('REPO_UPLOAD_RELEASES', System.getenv('REPO_UPLOAD_RELEASES'))
    if (ext.REPO_UPLOAD_RELEASES == null) {
        ext.REPO_UPLOAD_RELEASES = 'http://nexus.statkart.no:8090/nexus/content/repositories/releases/'
        logger.warn "warning: REPO_UPLOAD_RELEASES not defined. Defaulting to ${'http://admin:***@nexus.statkart.no:8090/nexus/content/repositories/releases/'}"
    }
    ext.REPO_UPLOAD_RELEASES_USERNAME = rootProject.properties.get('REPO_UPLOAD_RELEASES_USERNAME', System.getenv('REPO_UPLOAD_RELEASES_USERNAME'))
    if (ext.REPO_UPLOAD_RELEASES_USERNAME == null) {
        ext.REPO_UPLOAD_RELEASES_USERNAME = 'admin'
        logger.warn "warning: REPO_UPLOAD_RELEASES_USERNAME not defined. Defaulting to admin"
    }
    ext.REPO_UPLOAD_RELEASES_PASSWORD = rootProject.properties.get('REPO_UPLOAD_RELEASES_PASSWORD', System.getenv('REPO_UPLOAD_RELEASES_PASSWORD'))
    if (ext.REPO_UPLOAD_RELEASES_PASSWORD == null) {
        ext.REPO_UPLOAD_RELEASES_PASSWORD = 'admin123'
        logger.warn "warning: REPO_UPLOAD_RELEASES_PASSWORD not defined. Defaulting to default admin password"
    }

}
